@@ -10,3 +10,4 @@
       Added table_options() and booktabs() for booktabs support
       Gave different defaults for row label justification and data justification
       Suppress page breaks in RowFactor().
+      Allow options to be set temporarily in latex() call.
